<resources>
    <string name="app_name">Github Top Stars</string>
    <string name="name">Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="image_from_repo_owner">Image from repository Owner</string>
    <string name="starts">Starts:</string>
    <string name="forks">Forks:</string>
    <string name="fetch_data_error">Failed to fetch data.</string>
    <string name="retry">Retry</string>
    <string name="repos_list_load_state">Repos list load State.</string>
</resources>