<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/repos_list_state_footer_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/footer_item_margin">

    <ProgressBar
        android:id="@+id/footer_item_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:id="@+id/footer_item_load_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/repos_list_load_state"
        android:visibility="visible" />

    <Button
        android:id="@+id/footer_item_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:visibility="visible" />
</androidx.appcompat.widget.LinearLayoutCompat>